--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,12 @@ body{
 .main{
   background-color: white;
   margin:0 auto;
-  border-radius: 15px;
+  border-radius: 1rem;
   text-align: center;
   width:25%;
   align-content: center;
-  margin-top: 50px;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
 
 
 }
@@ -27,8 +28,8 @@ h3{
 }
 img{
   margin:auto;
-  margin-top: 15px;
-  border-radius: 15px;
+  margin-top: 1rem;
+  border-radius: 1rem;
   width:90%;
 
 
@@ -36,8 +37,8 @@ img{
 }
 
 p{
-  padding: 10px 10px 10px 10px;
-  padding-bottom: 30px;
+  padding: 1rem 1rem;
+  padding-bottom: 1.5rem;
   font-size:2vmin;
 
 
